--- a/My-Webapp/week7/midterm3/index.html
+++ b/My-Webapp/week7/midterm3/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gilbert Midterm Practice ET-710</title>
+    <title>Gilbert Midterm ET-710</title>
 
     <!-- *Begin AngularJS -->
         <script src="js/vendor/angular-1.7.8/angular.min.js"></script>
