--- a/My-Webapp/week7/midterm3/index.html
+++ b/My-Webapp/week7/midterm3/index.html
@@ -47,7 +47,7 @@
     <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
       <button class="menu-icon" type="button" data-toggle></button>
     </span>
-    <a class="topbar-responsive-logo" href="#"><strong>Gilbert Midterm Practice ET-710</strong></a>
+    <a class="topbar-responsive-logo" href="#"><strong>Gilbert Midterm ET-710</strong></a>
   </div>
   <div id="topbar-responsive" class="topbar-responsive-links">
     <div class="top-bar-right">
