--- a/My-Webapp/week7/midterm4/index.html
+++ b/My-Webapp/week7/midterm4/index.html
@@ -78,7 +78,7 @@
 
 
     <!-- *Begin Header -->
-  
+
 </div>
     <!-- *End Header -->
 
@@ -160,8 +160,8 @@
               <div class="column">
                 <ul class="menu marketing-site-footer-bottom-links">
                   <li><a href="#">Home</a></li>
-                  <li><a href="about/index.html">About</a></li>
-                  <li><a href="services/index.html">Services</a></li>
+                  <li><a href="index.html#!/about">About</a></li>
+                  <li><a href="index.html#!/servicesl">Services</a></li>
                   <li><a href="index.html#!/works">Works</a></li>
                   <li><a href="index.html#!/news">News</a></li>
                   <li><a href="index.html#!/contact">Contact</a></li>
